--- a/.github/workflows/lede-tagSL-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-openwrt-builder.yml
@@ -99,6 +99,7 @@ jobs:
         cd openwrt
         rm -rf ./package/lean/wol                     #删除缺省的网络唤醒插件，精简固件体积，针对master版本
         rm -rf ./package/feeds/packages/vlmcsd        #删除缺省的KVM服务器插件，精简固件体积，针对master版本
+        rm -rf ./package/lean/adbyby                  ##删除缺省的广告屏蔽大师 Plus+插件，精简固件体积，针对20230609版本
         
         cd ..
         
