--- a/.github/workflows/lede-tagSL-af2021-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-af2021-openwrt-builder.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: Lede tagSL OpenWrt Builder
+name: Lede tagSL after2021 OpenWrt Builder
 
 on:
   repository_dispatch:
