--- a/.github/workflows/immortalwrt-tagSL-builder.yml
+++ b/.github/workflows/immortalwrt-tagSL-builder.yml
@@ -185,6 +185,28 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
+        if [ -n "$(ls *.img.gz)" ]; then
+            #echo "BD_COMPILE=success" >> $GITHUB_ENV
+            #echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
+            #echo "DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+            ##KERNEL=$(cat *.manifest | awk '/^kernel/ {print $2}' | tr -d ' ')
+            #echo "KERNEL=$(cat *.manifest | grep kernel | grep = -m 1 | cut -d= -f2 | cut -d- -f1)" >> $GITHUB_ENV   #ubuntu交互模式下能正确显示结果，这里是错误的，批命令下写法不同？
+            echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV                    #这里，这样子写，能输出正确的结果
+            #echo "KERNEL=$KERNEL" >> $GITHUB_ENV
+            #Uppercase_String=$(echo "${{ env.BD_PROJECT }}" | tr '[:lower:]' '[:upper:]')
+            #echo "Uppercase_String=$Uppercase_String" >> $GITHUB_ENV
+            #tar -czvf packages.tar.gz packages
+            #rm -rf packages
+            echo "===========编译成功,准备上传==========="
+            #send_message "编译成功,准备上传" "编译成功,准备上传"
+          else
+            #rm -f /home/runner/stop_signal
+            echo "===========编译失败,继续暂停==========="
+            #echo "BD_COMPILE=failure" >> $GITHUB_ENV
+            echo "KERNEL=failure" >> $GITHUB_ENV
+            #send_message "编译失败,继续暂停" "编译失败,继续暂停"
+            #return 1  # 返回非零值表示编译失败
+          fi
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
@@ -214,6 +236,26 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
+        body: |
+          ===Firmware for x86_64===
+          ### 📒 编译的固件信息
+          - 💻 平台架构: x86_64 ( 32K 600M )                       
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本: ${{ env.KERNEL }}                                              
+          - 🌐 默认地址: 192.168.4.198 
+          - 🔑 默认密码: 空                
+           
+          ### 📒 插件列表:
+          ```
+          Docker
+          软件仓库（iStore）
+          Openclash
+          Passwall
+          AdguardHome
+          Ssr-plus
+          ...
+
 
     - name: list disk space
       run: |
