--- a/immortalwrt_x86_64.config
+++ b/immortalwrt_x86_64.config
@@ -325,7 +325,7 @@ CONFIG_PACKAGE_script-utils=y
 CONFIG_PACKAGE_shadowsocks-libev-config=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
+# CONFIG_PACKAGE_shadowsocks-libev-ss-server is not set  ##编译immortalwrt-master版本报错。24.10.06，openwrt-23.05和openwrt-21.02版本中设置y未报错
 CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
