--- a/.github/workflows/lede-tagSL-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-openwrt-builder.yml
@@ -243,7 +243,7 @@ jobs:
           Docker
           软件仓库（iStore）
           Openclash
-          Passwall
+          Passwall V4.78-3
           AdguardHome
           Ssr-plus
           SmartDNS
