--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -150,7 +150,8 @@ CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lua-maxminddb=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-argone-config=y
+#CONFIG_PACKAGE_luci-app-argone-config is not set
+CONFIG_PACKAGE_luci-theme-argon-config=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set
 #CONFIG_PACKAGE_luci-app-autotimeset is not set
 CONFIG_PACKAGE_luci-app-cifs-mount=y
@@ -181,7 +182,8 @@ CONFIG_PACKAGE_luci-app-store=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 #CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn is not set
+CONFIG_PACKAGE__luci-i18n-argon-config-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn is not set
 #CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
