--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -201,7 +201,8 @@ CONFIG_PACKAGE_luci-lib-docker=y
 #CONFIG_PACKAGE_luci-lib-taskd is not set
 #CONFIG_PACKAGE_luci-lib-xterm is not set
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-argone=y
+#CONFIG_PACKAGE_luci-theme-argone is not set
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
 ##CONFIG_PACKAGE_netdata is not set
