--- a/lienol.config
+++ b/lienol.config
@@ -151,7 +151,8 @@ CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lua-maxminddb=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-argone-config=y
+#CONFIG_PACKAGE_luci-app-argone-config is not set
+CONFIG_PACKAGE_luci-theme-argon-config=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-autotimeset=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
@@ -207,7 +208,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn is not set
+CONFIG_PACKAGE__luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
@@ -225,7 +227,8 @@ CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-argone=y
+#CONFIG_PACKAGE_luci-theme-argone is not set
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_netdata=y
