--- a/official-openwrt-目前.config
+++ b/official-openwrt-目前.config
@@ -4901,7 +4901,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 
 CONFIG_GRUB_TITLE="OpenWrt Compile by Yingziwo"
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-argone-config=y
+#CONFIG_PACKAGE_luci-app-argone-config is not set
+CONFIG_PACKAGE_luci-theme-argon-config=y
 CONFIG_PACKAGE_luci-app-autotimeset=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
@@ -4917,11 +4918,15 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-store=y
 
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn is not set
+CONFIG_PACKAGE__luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+
+#CONFIG_PACKAGE_luci-theme-argone is not set
+CONFIG_PACKAGE_luci-theme-argon=y
 
 # end of 3. Applications
 
@@ -4931,6 +4936,7 @@ CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-openwrt=y
+
 # CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
 # end of 4. Themes
 
