--- a/official_openwrt.config
+++ b/official_openwrt.config
@@ -5041,6 +5041,13 @@ CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 
+#CONFIG_PACKAGE_luci-app-argone-config is not set   # argon支持23.05也支持18.06
+CONFIG_PACKAGE_luci-theme-argon-config=y
+#CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn is not set
+CONFIG_PACKAGE__luci-i18n-argon-config-zh-cn=y
+#CONFIG_PACKAGE_luci-theme-argone is not set
+CONFIG_PACKAGE_luci-theme-argon=y
+
 # end of 3. Applications
 
 #
