--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -50,23 +50,23 @@ jobs:
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
     
-    - name: list disk space
-      run: |
-        df -hT $PWD
+    #- name: list disk space
+    #  run: |
+    #    df -hT $PWD
     
-    - name: 释放Ubuntu磁盘空间
-      uses: jlumbroso/free-disk-space@main
-      with:
-        # this might remove tools that are actually needed,
-        # if set to "true" but frees about 6 GB
-        tool-cache: true
-        # all of these default to true, but feel free to set to
-        # "false" if necessary for your workflow
-        android: true
-        dotnet: true
-        haskell: true
-        large-packages: true
-        swap-storage: true
+    #- name: 释放Ubuntu磁盘空间
+    #  uses: jlumbroso/free-disk-space@main
+    #  with:
+    #    # this might remove tools that are actually needed,
+    #    # if set to "true" but frees about 6 GB
+    #    tool-cache: true
+    #    # all of these default to true, but feel free to set to
+    #    # "false" if necessary for your workflow
+    #    android: true
+    #    dotnet: true
+    #    haskell: true
+    #    large-packages: true
+    #    swap-storage: true
    
     - name: list disk space
       run: |
@@ -126,9 +126,13 @@ jobs:
     - name: Compile the firmware
       id: compile
       run: |
-        cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        pwd
+        ls -la
+        tar -czvf openwrt-sr.tar.gz openwrt
+        mkdir openwrt/bin/targets
+        #cd openwrt
+        #echo -e "$(nproc) thread compile"
+        #make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
@@ -170,36 +174,36 @@ jobs:
         [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
-    - name: Upload firmware to release
-      uses: softprops/action-gh-release@master
-      if: steps.tag.outputs.status == 'success' && !cancelled()
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-      with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
-        body: |
-          ===Firmware for x86_64===
-          ### 📒 (精简插件)固件信息
-          - 💻 平台架构: x86_64 ( 32K 600M )                       
-          - ⚽ 固件源码: ${{ env.REPO_URL }}
-          - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🚀 内核版本:  K6.6.52                              
-          - 🌐 默认地址: 192.168.4.10 
-          - 🔑 默认密码: 空                
+   # - name: Upload firmware to release
+   #   uses: softprops/action-gh-release@master
+   #   if: steps.tag.outputs.status == 'success' && !cancelled()
+   #   env:
+   #     GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+   #   with:
+   #     tag_name: ${{ steps.tag.outputs.release_tag }}
+   #     body_path: release.txt
+   #     files: ${{ env.FIRMWARE }}/*
+   #     body: |
+   #       ===Firmware for x86_64===
+   #       ### 📒 (精简插件)固件信息
+   #       - 💻 平台架构: x86_64 ( 32K 600M )                       
+   #       - ⚽ 固件源码: ${{ env.REPO_URL }}
+   #       - 💝 源码分支: ${{ env.REPO_BRANCH }}
+   #       - 🚀 内核版本:  K6.6.52                              
+   #       - 🌐 默认地址: 192.168.4.10 
+   #       - 🔑 默认密码: 空                
            
-          ### 📒 插件列表:
-          ```
-          Docker
-          iStore
-          Openclash
-          Passwall
-          AdguardHome
-          Ssr-plus
-          SmartDNS
-          NAS
-          ...
+   #       ### 📒 插件列表:
+   #       ```
+   #       Docker
+   #       iStore
+   #       Openclash
+   #       Passwall
+   #       AdguardHome
+   #       Ssr-plus
+   #       SmartDNS
+   #       NAS
+   #       ...
 
     - name: list disk space
       run: |
