--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -131,10 +131,11 @@ jobs:
         tar -czvf openwrt-sr.tar.gz openwrt
         #mkdir openwrt/bin
         #mkdir openwrt/bin/targets
-        mkdir openwrt/bin/targets/x86
-        mkdir openwrt/bin/targets/x86/64
+        #mkdir openwrt/bin/targets/x86
+        #mkdir openwrt/bin/targets/x86/64
         cp -f openwrt-sr.tar.gz openwrt/bin/targets/x86/64
-        #cd openwrt
+        ls -la
+        cd openwrt
         #echo -e "$(nproc) thread compile"
         #make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
