--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -128,6 +128,8 @@ jobs:
       run: |
         pwd
         ls -la
+        cd openwrt
+        cd ..
         tar -czvf openwrt-sr.tar.gz openwrt
         #mkdir openwrt/bin
         #mkdir openwrt/bin/targets
