--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,13 +144,15 @@ jobs:
         #cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
         #rm -rf openwrt-sr-sh.tar.gz
         cd openwrt
-        tar -czvf openwrt-sr.tar.gz .
+        tar -czvf ../openwrt/openwrt-sr.tar.gz .
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets              #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86          #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86/64       #在 Download package 目录就已经存在，Clone source code步骤还没有
-        cp -f openwrt-sr.tar.gz ./bin/targets/x86/64/
+        cd ..
+        cp -f openwrt-sr.tar.gz ./openwrt/bin/targets/x86/64/
         rm -rf openwrt-sr.tar.gz
+        cd openwrt
         ls -la
         #echo -e "$(nproc) thread compile"
         #make -j$(nproc) || make -j1 || make -j1 V=s
