--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,7 +144,7 @@ jobs:
         #cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
         #rm -rf openwrt-sr-sh.tar.gz
         cd openwrt
-        tar -czvf ../openwrt/openwrt-sr.tar.gz .
+        tar -czvf ../openwrt/openwrt-sr.tar.gz --exclude=./.git/hooks/*.sample .
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets              #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86          #在 Download package 目录就已经存在，Clone source code步骤还没有
