--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,9 +144,9 @@ jobs:
       run: |
         pwd
         ls -la
-        #tar -czvf openwrt-sr-sh.tar.gz *
-        #cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
-        #rm -rf openwrt-sr-sh.tar.gz
+        tar -czvf openwrt-sr-sh.tar.gz .
+        cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
+        rm -rf openwrt-sr-sh.tar.gz
         cd openwrt
         ##tar -czf ../openwrt/openwrt-sr.tar.gz .
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
