--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,11 +144,11 @@ jobs:
       run: |
         pwd
         ls -la
-        tar -czf openwrt-sr-sh.tar.gz .
-        cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
-        rm -rf openwrt-sr-sh.tar.gz
+        #tar -czf openwrt-sr-sh.tar.gz .                                     #报 tar: .: file changed as we read it 的错误
+        #cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
+        #rm -rf openwrt-sr-sh.tar.gz
         cd openwrt
-        ##tar -czf ../openwrt/openwrt-sr.tar.gz .
+        ##tar -czf ../openwrt/openwrt-sr.tar.gz .                            #报 tar: .: file changed as we read it 的错误
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets              #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86          #在 Download package 目录就已经存在，Clone source code步骤还没有
