--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,19 +144,19 @@ jobs:
       run: |
         pwd
         ls -la
-        #tar -czf openwrt-sr-sh.tar.gz .                                     #报 tar: .: file changed as we read it 的错误
-        #cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
-        #rm -rf openwrt-sr-sh.tar.gz
+        tar --warning=no-file-changed -czvf openwrt-sr-sh.tar.gz .                                     #报 tar: .: file changed as we read it 的错误
+        cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
+        rm -rf openwrt-sr-sh.tar.gz
         cd openwrt
-        ##tar -czf ../openwrt/openwrt-sr.tar.gz .                            #报 tar: .: file changed as we read it 的错误
+        tar --warning=no-file-changed -czvf ../openwrt/openwrt-sr.tar.gz .                            #报 tar: .: file changed as we read it 的错误
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets              #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86          #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86/64       #在 Download package 目录就已经存在，Clone source code步骤还没有
-        #cd ..
-        #cp -f openwrt-sr.tar.gz ./openwrt/bin/targets/x86/64/
-        #rm -rf openwrt-sr.tar.gz
-        #cd openwrt
+        cd ..
+        cp -f openwrt-sr.tar.gz ./openwrt/bin/targets/x86/64/
+        rm -rf openwrt-sr.tar.gz
+        cd openwrt
         #ls -la
         #echo -e "$(nproc) thread compile"
         #make -j$(nproc) || make -j1 || make -j1 V=s
