--- a/.github/workflows/sc-clone.yml
+++ b/.github/workflows/sc-clone.yml
@@ -144,11 +144,13 @@ jobs:
       run: |
         pwd
         ls -la
-        tar --warning=no-file-changed -czvf openwrt-sr-sh.tar.gz *                                     #报 tar: .: file changed as we read it 的错误
+        tar --warning=no-file-changed -czvf openwrt-sr-sh.tar.gz *.*                                     #报 tar: .: file changed as we read it 的错误
         cp -f openwrt-sr-sh.tar.gz ./openwrt/bin/targets/x86/64/
+        ls
         rm -rf openwrt-sr-sh.tar.gz
+        ls
         cd openwrt
-        tar --warning=no-file-changed -czvf ../openwrt/openwrt-sr.tar.gz .                            #报 tar: .: file changed as we read it 的错误
+        tar --warning=no-file-changed -czf ../openwrt/openwrt-sr.tar.gz .                            #报 tar: .: file changed as we read it 的错误
         #mkdir openwrt/bin                      #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets              #在 Download package 目录就已经存在，Clone source code步骤还没有
         #mkdir openwrt/bin/targets/x86          #在 Download package 目录就已经存在，Clone source code步骤还没有
